fix: add aws sdk presigner deps

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postinstall": "npm run download-model"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.952.0",
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@mediapipe/tasks-vision": "0.10.3",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
